--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,66 @@
-group = 'renegades'
-version = '0.0.1'
+group = 'dictators'
+version = '0.0.1-SNAPSHOT'
+
+ext.isReleaseVersion = !version.endsWith("-SNAPSHOT")
+
+ext {
+    vertxVersion =  "2.1M2"
+    vertxtestVersion = "2.0.0-final"
+}
+
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
 
 subprojects {
 
+	apply plugin: 'java'
+	apply plugin: 'idea'
+	apply plugin: 'eclipse'
+
+
+	repositories {
+		mavenCentral()
+	}
 
 }
 
+task wrapper(type: Wrapper, description: "Create a Gradle self-download wrapper") {
+	gradleVersion = '1.9'
+}
 
-task wrapper(type: Wrapper) {
-	gradleVersion = '1.8'
+
+
+def configurePom(def pom) {
+  pom.project {
+    name rootProject.name
+    description 'A dashboard for amazon email bounces.'
+    inceptionYear '2013'
+    packaging 'jar'
+
+    url 'https://github.com/kevinbayes/aws-email-dashboard'
+
+    developers {
+      developer {
+        id 'kevinbayes'
+        name 'Kevin Bayes'
+        email 'kevin@bayes.me'
+      }
+    }
+
+    scm {
+      url 'https://github.com/kevinbayes/aws-email-dashboard'
+    }
+
+    licenses {
+      license {
+        name 'The Apache Software License, Version 2.0'
+        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+        distribution 'repo'
+      }
+    }
+
+    properties {
+      setProperty('project.build.sourceEncoding', 'UTF8')
+    }
+  }
 }
