--- a/engine/build.gradle
+++ b/engine/build.gradle
@@ -1,4 +1,18 @@
-project(':engine') {
+
+dependencies {
+  compile 'io.vertx:vertx-core:'+vertxVersion
+  compile 'io.vertx:vertx-hazecast:'+vertxVersion
+  compile 'io.vertx:vertx-platform:'+vertxVersion
+
+  compile 'io.vertx:vertx-testframework:'+vertxtestVersion
+}
+
+
+
+defaultTasks = ['assemble']
+
+test {
 
 
 }
+
