--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ ext {
 	
 	camelVersion = "2.12.2"
 	junitVersion = "4.11"
+
+  scalaVersion = "2.10.2"
 }
 
 subprojects {
@@ -18,6 +20,12 @@ subprojects {
 	apply plugin: 'java'
 	apply plugin: 'scala'
 	apply plugin: 'eclipse'
+
+  dependencies {
+    // Scala
+    compile("org.scala-lang:scala-library:$scalaVersion")
+    compile("org.scala-lang:scala-reflect:$scalaVersion")
+  }
 
 
 	repositories {
