--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -39,6 +39,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder "../config/salt/", "/srv/salt/"
+
+  config.vm.provision :salt do |salt|
+
+    salt.minion_config = "../config/minion"
+    salt.run_highstate = true
+
+  end
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
