--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,17 +1,18 @@
 dependencies {
-  compile 'io.vertx:vertx-core:'+vertxVersion
-  compile 'io.vertx:vertx-hazelcast:'+vertxVersion
-  compile 'io.vertx:vertx-platform:'+vertxVersion
   
-  compile 'io.vertx:lang-scala:'+vertxScalaVersion
+  compile "org.scala-lang:scala-library:$scalaVersion"
+  compile "org.scala-lang:scala-reflect:$scalaVersion"
+
+  compile "io.vertx:lang-scala:$vertxScalaVersion"
   
-  compile 'org.apache.camel:camel-core:'+ camelVersion
-  compile 'org.apache.camel:camel-aws:'+ camelVersion
-  compile 'org.apache.camel:camel-vertx:'+ camelVersion
-  compile 'org.apache.camel:camel-scala:'+ camelVersion
+  compile "org.apache.camel:camel-core:$camelVersion"
+  compile "org.apache.camel:camel-aws:$camelVersion"
+  compile "org.apache.camel:camel-vertx:$camelVersion"
+  compile "org.apache.camel:camel-scala:$camelVersion"
   
-  testCompile 'junit:junit:'+ junitVersion
-  testCompile 'io.vertx:testtools:' + vertxtestVersion
+  testCompile "junit:junit:$junitVersion"
+  testCompile "org.apache.camel:camel-test:$camelVersion"
+  testCompile "io.vertx:testtools:$vertxtestVersion"
 }
 
 
