--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -1,32 +1,62 @@
-
+apply from: "../gradle/vertx.gradle"
 
 dependencies {
 
   compile project(path: ":common")
 
-  compile 'io.vertx:vertx-core:'+vertxVersion
-  compile 'io.vertx:vertx-hazelcast:'+vertxVersion
-  compile 'io.vertx:vertx-platform:'+vertxVersion
+  compile "io.vertx:vertx-core:$vertxVersion"
+  compile "io.vertx:vertx-hazelcast:$vertxVersion"
+  compile "io.vertx:vertx-platform:$vertxVersion"
   
-  compile 'io.vertx:lang-scala:'+vertxScalaVersion
-  
-  compile 'org.apache.camel:camel-core:'+ camelVersion
-  compile 'org.apache.camel:camel-aws:'+ camelVersion
-  compile 'org.apache.camel:camel-vertx:'+ camelVersion
-  compile 'org.apache.camel:camel-scala:'+ camelVersion
-  
-  testCompile 'junit:junit:'+ junitVersion
-  testCompile 'org.apache.camel:camel-test:'+ camelVersion
-  testCompile 'io.vertx:testtools:' + vertxtestVersion
-}
+  compile "org.scala-lang:scala-library:$scalaVersion"
+  compile "org.scala-lang:scala-reflect:$scalaVersion"
 
-project.ext.moduleName = "dictators~integration~0.0.1"
+  compile "io.vertx:lang-scala:$vertxScalaVersion"
+  
+  compile "org.apache.camel:camel-core:$camelVersion"
+  compile "org.apache.camel:camel-aws:$camelVersion"
+  compile "org.apache.camel:camel-vertx:$camelVersion"
+  compile "org.apache.camel:camel-scala:$camelVersion"
+  
+  testCompile "junit:junit:$junitVersion"
+  testCompile "org.apache.camel:camel-test:$camelVersion"
+  testCompile "io.vertx:testtools:$vertxtestVersion"
+}
 
 
 defaultTasks = ['assemble']
 
-test {
+def configurePom(def pom) {
+  pom.project {
+    name rootProject.name
+    description 'Integrate with aws using apache camel to read bounced emails and pass them to the eventbus.'
+    inceptionYear '2014'
+    packaging 'jar'
 
+    url 'https://github.com/kevinbayes/aws-email-dashboard'
 
+    developers {
+      developer {
+        id 'kevinbayes'
+        name 'Kevin Bayes'
+        email 'kevin@bayes.me'
+      }
+    }
+
+    scm {
+      url 'https://github.com/kevinbayes/aws-email-dashboard'
+    }
+
+    licenses {
+      license {
+        name 'The Apache Software License, Version 2.0'
+        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+        distribution 'repo'
+      }
+    }
+
+    properties {
+      setProperty('project.build.sourceEncoding', 'UTF8')
+    }
+  }
 }
-
